[package]
name = "cargbin"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
eframe = { version = "0.27.0", features = ["persistence"] }
egui27 = { version = "0.27", package = "egui", default-features = false, optional = true }
catppuccin-egui = { version = "5.1", default-features = false, features = ["egui27"] }
egui_nerdfonts = "0.1.3"